Swift Lint strict in CI

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,7 +3,7 @@ excluded:
   - ${PWD}/Pods
   - ${PWD}/DerivedData
   - ${PWD}/.build
-  - ${PWD}/Tools/.build
+  - ${PWD}/Tools
   - ${PWD}/Tests/OpenFeatureTests/MockingbirdMocks/
   - ${PWD}/Sources/OpenFeature/FlagResolver
 
