--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,18 +9,18 @@ on:
       - 'main'
 
 jobs:
-  test:
+  Tests:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build and Test
       run: swift test
 
-  swiftlint:
+  SwiftLint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: GitHub Action for SwiftLint
       uses: norio-nomura/action-swiftlint@3.2.1
       with:
-        args: --config .swiftlint.yml
+        args: --config .swiftlint.yml --strict
