--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,14 +9,14 @@ on:
       - 'main'
 
 jobs:
-  test:
+  Tests:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build and Test
       run: swift test
 
-  swiftlint:
+  SwiftLint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
